# theseus

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .yamllint  LICENSE  README.md  constraints.txt  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: adr-style-guide-commentary-20250903.md
docs/adrs/: ADR-0001-style-guide.md  ADR-0002-template-owner.md  ADR-0003-template-delta.md  ADR-0004-template-strategy.md  ADR-0005-template-style-guide.md  ADR-0006-cli-ownership-lifecycle.md
src/adr_linter/: __init__.py  __main__.py  cli.py  constants.py  engine.py  filters.py  io.py  models.py  policy.py  report.py
src/adr_linter/constants/: __init__.py  codes.py  legacy.py  sections.py  validation.py
src/adr_linter/parser/: __init__.py  front_matter.py  structure.py
src/adr_linter/services/: __init__.py  index.py  linkgraph.py  telemetry.py
src/adr_linter/validators/: __init__.py  registry.py
src/theseus/: __init__.py  __main__.py
src/theseus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/theseus_ariadne.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py
tests/adr_linter/: __init__.py  conftest.py
tests/adr_linter/filters/: __init__.py  adrlint_test_filters_001_compile_k_predicate.py
tests/adr_linter/parser/: __init__.py  adrlint_test_parser_001_structure_llm_tail_selection.py  adrlint_test_parser_002_purity_no_io.py
tools/: __init__.py  anchor_snapshot.py  verify_adr_architecture.py
tools/bash/: commit_msg_reminder.sh  git_hook_pre_commit.sh
(+145 files in other folders)
